--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -71,7 +71,7 @@
   opacity: 0.9 !important;
 }
 .logo{
-  background-image: url(../Assets/logor.png);
+  background-image: url(../Assets/e-removebg-preview.png);
   background-size: cover;
   width: 90px;
   height: 80px;
@@ -325,7 +325,7 @@
 .webimage {
   max-width: 500px;
   height: 350px;
-  background-image: url(../Assets/web-removebg-preview.png);
+  background-image: url(../Assets/Ekran_görüntüsü_2023-03-24_131703-removebg-preview.png);
   background-size: cover;
   background-position: center;
 }
@@ -344,7 +344,7 @@
 
 .projectbackground {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #4158d0;
   background-image: linear-gradient(
     43deg,
